[package]
name = "hdcquery"
version = "0.1.1"
authors = [ "ayosec@gmail.com" ]
edition = "2018"
license = "Apache-2.0"
description = "CLI tool to query data from hub.docker.com"
repository = "https://github.com/ayosec/hdcquery"

[dependencies]
anyhow = "1.0.34"
atty = "0.2.14"
bytesize = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
gumdrop = "0.8.0"
reqwest = { version = "0.10.9", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
shell-words = "1.0.0"
terminal_size = "0.1.15"
textwrap = { version = "0.12", features = ["terminal_size"] }
tokio = { version = "0.2", features = ["rt-threaded", "io-util", "io-std"] }

[dev-dependencies]
assert_cmd = "1.0.2"

[target.'cfg(unix)'.dev-dependencies]
rexpect = "0.4.0"
